finish auto_posting(img)

--- a/Python3.10.5_pipenv/vk/auto_posting(img)/Pipfile
+++ b/Python3.10.5_pipenv/vk/auto_posting(img)/Pipfile
@@ -4,6 +4,12 @@ verify_ssl = true
 name = "pypi"
 
 [packages]
+requests = "*"
+bs4 = "*"
+tqdm = "*"
+lxml = "*"
+aiogram = "*"
+schedule = "*"
 
 [dev-packages]
 
